--- a/style/sass.css
+++ b/style/sass.css
@@ -4140,121 +4140,53 @@ body {
   align-items: center;
 }
 .body__index main .conte__menu .header__index .icono-menu {
-  transform: scale(0.9);
+  transform: scale(0.8);
+  background: #000;
   z-index: 1000;
+}
+.body__index main .conte__menu .header__index .icono-menu .bars__menu {
+  width: 10px;
+  height: 8px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(4);
+  cursor: pointer;
+}
+.body__index main .conte__menu .header__index .icono-menu .bars__menu span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #ffffff;
+  margin-top: 1px;
+  transform-origin: 0px 100%;
+  transition: all 300ms;
+  transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+}
+.body__index main .conte__menu .header__index .icono-menu .bars__menu .menu_index {
+  width: 100vw;
+  height: 100vh;
+  background: #ffffff;
+}
+.body__index main .conte__menu .header__index .icono-menu .menu_index_active {
+  width: 100vw;
+  height: 100vh;
+  background: #ff3232;
+}
+.body__index main .conte__menu .header__index .icono-menu .activeline1__bars-menu {
+  transform: rotate(43deg) translate(0px, -2px);
+}
+.body__index main .conte__menu .header__index .icono-menu .activeline2__bars-menu {
+  opacity: 0;
+  margin-left: -50vh;
+  transform: scale(2);
+}
+.body__index main .conte__menu .header__index .icono-menu .activeline3__bars-menu {
+  transform: rotate(-43deg) translate(0px, 2px);
 }
 .body__index main .conte__menu .header__index .cont__logo__nav {
   transform: scale(0.9);
   z-index: 1000;
-}
-.body__index main .conte__menu .cont-menu-nuevo {
-  z-index: 20;
-  background: #ffffff;
-  box-shadow: -40vw 0vh rgba(0, 0, 0, 0.377);
-  width: 60vw;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  right: 0;
-  transition: all 0.5s ease-in-out;
-  border-left: 1px solid #19232D;
-}
-.body__index main .conte__menu .cont-menu-nuevo .cont__logo__menu {
-  height: 5.2em;
-  border-bottom: 1px solid #19232D;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul {
-  display: flex;
-  flex-direction: row;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_social {
-  padding: 2em 5em 0px 5em;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 25px;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_social p {
-  color: #979797;
-  font-family: Sora;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 250;
-  line-height: 107.5%;
-  padding-bottom: 0.5em;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_social li {
-  list-style: none;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_social li a {
-  color: #000000;
-  font-family: Sora;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 200;
-  line-height: 107.5%;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_menu {
-  padding: 2em 4em 2em 4em;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 20px;
-  border-left: 1px solid #19232D;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_menu p {
-  color: #979797;
-  font-family: Sora;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 250;
-  line-height: 107.5%;
-  padding-bottom: 0.5em;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_menu li {
-  list-style: none;
-}
-.body__index main .conte__menu .cont-menu-nuevo ul .lista_menu li a {
-  color: #000;
-  font-family: Sora;
-  font-size: 35px;
-  font-style: normal;
-  font-weight: 200;
-  line-height: 107.5%;
-}
-.body__index main .conte__menu .cont-menu-nuevo .poner_contacto {
-  padding: 1em 5em 0px 5em;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 5px;
-  border-top: 1px solid #19232D;
-}
-.body__index main .conte__menu .cont-menu-nuevo .poner_contacto p {
-  color: #979797;
-  font-family: Sora;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 250;
-  line-height: 107.5%;
-  padding-bottom: 1em;
-}
-.body__index main .conte__menu .cont-menu-nuevo .poner_contacto .correo_contacto {
-  color: #000;
-  font-family: Sora;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 600;
-  display: flex;
-  padding: 0px 0px 6px 0px;
-  align-items: center;
-}
-.body__index main .conte__menu .active {
-  border-radius: 1000px 0px 0px 1000px;
-  transform: translate(90vw);
-  visibility: hidden;
-  position: fixed;
-  background: #ffffff;
 }
 .body__index main .titulo__index {
   display: flex;
@@ -4306,6 +4238,7 @@ body {
   flex-shrink: 0;
 }
 .body__index main .titulo__index .cont_titulo_uno .contens_chips {
+  padding-left: 5px;
   display: flex;
   -moz-column-gap: 10px;
        column-gap: 10px;
@@ -4439,121 +4372,44 @@ body {
     align-items: center;
   }
   .body__index main .conte__menu .header__index .icono-menu {
-    transform: scale(0.9);
+    margin-right: 1em;
+    transform: scale(0.7);
+    background: rgba(0, 0, 0, 0);
     z-index: 1000;
+  }
+  .body__index main .conte__menu .header__index .icono-menu .bars__menu {
+    width: 10px;
+    height: 9px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(0%, 100%) scale(5);
+    cursor: pointer;
+  }
+  .body__index main .conte__menu .header__index .icono-menu .bars__menu span {
+    display: block;
+    width: 100%;
+    height: 0.5px;
+    background: #ffffff;
+    margin-top: 2px;
+    transform-origin: 0px 100%;
+    transition: all 300ms;
+    transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+  }
+  .body__index main .conte__menu .header__index .icono-menu .activeline1__bars-menu {
+    transform: rotate(45deg) translate(0px, -1px);
+  }
+  .body__index main .conte__menu .header__index .icono-menu .activeline2__bars-menu {
+    opacity: 0;
+    margin-left: -5em;
+    transform: scale(2);
+  }
+  .body__index main .conte__menu .header__index .icono-menu .activeline3__bars-menu {
+    transform: rotate(-45deg) translate(0px, 1px);
   }
   .body__index main .conte__menu .header__index .cont__logo__nav {
     transform: scale(0.9);
     z-index: 1000;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo {
-    z-index: 20;
-    background: #ffffff;
-    box-shadow: -40vw 0vh rgba(0, 0, 0, 0.377);
-    width: 60vw;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    transition: all 0.5s ease-in-out;
-    border-left: 1px solid #19232D;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo .cont__logo__menu {
-    height: 5.2em;
-    border-bottom: 1px solid #19232D;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul {
-    display: flex;
-    flex-direction: row;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social {
-    padding: 2em 5em 0px 5em;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 25px;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social p {
-    color: #979797;
-    font-family: Sora;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 250;
-    line-height: 107.5%;
-    padding-bottom: 0.5em;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social li {
-    list-style: none;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_social li a {
-    color: #000000;
-    font-family: Sora;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 200;
-    line-height: 107.5%;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu {
-    padding: 2em 4em 2em 4em;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 20px;
-    border-left: 1px solid #19232D;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu p {
-    color: #979797;
-    font-family: Sora;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 250;
-    line-height: 107.5%;
-    padding-bottom: 0.5em;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu li {
-    list-style: none;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo ul .lista_menu li a {
-    color: #000;
-    font-family: Sora;
-    font-size: 35px;
-    font-style: normal;
-    font-weight: 200;
-    line-height: 107.5%;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo .poner_contacto {
-    padding: 1em 5em 0px 5em;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 5px;
-    border-top: 1px solid #19232D;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo .poner_contacto p {
-    color: #979797;
-    font-family: Sora;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 250;
-    line-height: 107.5%;
-    padding-bottom: 1em;
-  }
-  .body__index main .conte__menu .cont-menu-nuevo .poner_contacto .correo_contacto {
-    color: #000;
-    font-family: Sora;
-    font-size: 15px;
-    font-style: normal;
-    font-weight: 600;
-    display: flex;
-    padding: 0px 0px 6px 0px;
-    align-items: center;
-  }
-  .body__index main .conte__menu .active {
-    border-radius: 1000px 0px 0px 1000px;
-    transform: translate(90vw);
-    visibility: hidden;
-    position: fixed;
-    background: #ffffff;
   }
   .body__index main .titulo__index {
     display: flex;
@@ -4643,6 +4499,198 @@ body {
     color: #FDFDFF;
     font-family: Sora;
     font-size: 13px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 138.5%;
+    /* 18.005px */
+    letter-spacing: 0.65px;
+    text-transform: capitalize;
+  }
+}
+@media (max-width: 500px) {
+  .body__index {
+    height: 100vh;
+    padding: 1em;
+  }
+  .body__index .cursor {
+    display: none;
+  }
+  .body__index main {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    padding: 0em;
+    /* #####################   CONTENIDO ############################# */
+  }
+  .body__index main .boton_portafolio {
+    position: absolute;
+    bottom: -5px;
+    right: -1px;
+    z-index: 0;
+    transform: scale(1);
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor {
+    position: relative;
+    transform: scale(0.9);
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat {
+    position: absolute;
+    bottom: 25px;
+    right: 15px;
+    z-index: 1;
+    transform: rotate(-55deg);
+    transition-property: transform;
+    transition-duration: 0.2s;
+    transition-delay: 0s;
+    transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor .botonfloat:hover {
+    transform: rotate(0deg);
+  }
+  .body__index main .boton_portafolio .boton_portafolio_contenedor .blackfloat {
+    position: absolute;
+    bottom: 15px;
+    right: 5px;
+    z-index: 0;
+    animation-name: backfloat;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes backfloat {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  .body__index main .capa_blur {
+    background: rgba(83, 83, 83, 0.1764705882);
+    -webkit-backdrop-filter: blur(30.5px);
+            backdrop-filter: blur(30.5px);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0px;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: -1;
+    overflow: hidden;
+  }
+  .body__index main video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: -10;
+  }
+  .body__index main .conte__menu .header__index {
+    display: flex;
+    margin: 1rem 1rem 2rem 1rem;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .body__index main .conte__menu .header__index .cont__logo__nav {
+    transform: scale(0.9);
+    z-index: 1000;
+  }
+  .body__index main .titulo__index {
+    height: auto;
+    display: flex;
+    padding-left: 5px;
+    margin: 1rem 1rem 1rem 1rem;
+    flex-direction: column;
+    gap: 1em;
+    justify-content: space-between;
+    border-left: 1px solid #FFF;
+    text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
+  }
+  .body__index main .titulo__index .cont_titulo_uno {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .sub_titulo {
+    display: flex;
+    flex-direction: row;
+    gap: 1px;
+    text-align: start;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .sub_titulo img {
+    width: 19px;
+    height: 19px;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .sub_titulo p {
+    color: #FFF;
+    font-family: Sora;
+    font-size: calc(0.5em + 1vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.5%;
+    /* 18.005px */
+    letter-spacing: 0.65px;
+    text-transform: capitalize;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .titulo {
+    text-align: start;
+    justify-content: center;
+    color: #FFF;
+    font-family: Sora;
+    font-size: calc(1.5em + 1vw);
+    font-style: normal;
+    font-weight: 700;
+    line-height: 136%;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .titulo img {
+    padding-top: 0px;
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .contens_chips {
+    display: grid;
+    row-gap: 10px;
+    grid-auto-rows: 1.5rem;
+    grid-auto-columns: 1rem;
+    grid-template-columns: repeat(auto-fill, minmax(min(100%, 7rem), 1fr));
+  }
+  .body__index main .titulo__index .cont_titulo_uno .contens_chips .chips {
+    display: flex;
+    padding: 5px 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 2px;
+    border: 0.5px solid #ffffff;
+  }
+  .body__index main .titulo__index .cont_titulo_uno .contens_chips .chips p {
+    color: #FDFDFF;
+    text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25), 0px 0px 12px rgba(0, 0, 0, 0.25);
+    font-family: Sora;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 138.5%;
+    /* 18.005px */
+    letter-spacing: 0.65px;
+    text-transform: capitalize;
+  }
+  .body__index main .titulo__index .cont_titulo_dos {
+    padding-left: 5px;
+    margin-right: 20%;
+  }
+  .body__index main .titulo__index .cont_titulo_dos p {
+    text-align: start;
+    color: #ffffff;
+    font-family: Sora;
+    font-size: 10px;
     font-style: normal;
     font-weight: 300;
     line-height: 138.5%;
