--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -8,6 +8,75 @@
         overflow: hidden;
         width: 100%;
         height: 100%;
+        .conte__menu {
+            
+            .header__index {
+                display: flex;
+                margin: 1rem 5rem 1rem 5rem;
+                justify-content: space-between;
+                align-items: center;
+
+                .icono-menu {
+                    transform: scale(0.8);
+                    background: #000;
+                    z-index: 1000;
+                    .bars__menu{
+                        width: 10px;
+                        height: 10px;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%) scale(4);
+                        cursor: pointer;
+                        span {
+                            display: block;
+                            width: 100%;
+                            height: 1px;
+                            background: #ffffff;
+                            margin-top: 2px;
+                            transform-origin: 0px 100%;
+                            transition: all 300ms;
+                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+                        }
+                    }
+
+                    .activeline1__bars-menu{
+                        transform: rotate(45deg) translate( 0px , -1px);
+
+                    }
+                    
+                    .activeline2__bars-menu{
+                        opacity: 0;
+                        margin-left: -50vh;
+                        transform: scale(2);
+                    }
+                    
+                    .activeline3__bars-menu{
+                        transform: rotate(-45deg) translate( 0px, 1px);
+
+                    }
+
+                }
+                .cont__logo__nav {
+                    transform: scale(0.9);
+                    z-index: 1000;
+                }
+
+                
+            }
+            .contendor_activo_de_menu{
+                visibility: hidden;
+                left: 0px;
+                top: 0px;
+                width: 0vw;
+                height: 100vh;
+                position:absolute;
+                z-index: 9;
+                background: #FFF;
+            }
+
+
+        }
         
         .boton_portafolio {
             position: absolute;
@@ -84,75 +153,7 @@
 
         }
 
-        .conte__menu {
-            
-            .header__index {
-                display: flex;
-                margin: 1rem 5rem 1rem 5rem;
-                justify-content: space-between;
-                align-items: center;
-
-                .icono-menu {
-                    transform: scale(0.8);
-                    background: #000;
-                    z-index: 1000;
-                    .bars__menu{
-                        width: 10px;
-                        height: 8px;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%) scale(4);
-                        cursor: pointer;
-                        span {
-                            display: block;
-                            width: 100%;
-                            height: 1px;
-                            background: #ffffff;
-                            margin-top: 1px;
-                            transform-origin: 0px 100%;
-                            transition: all 300ms;
-                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
-                        }
-                        .menu_index{
-                            width: 100vw;
-                            height: 100vh;
-                            background: #ffffff;
-                        }
-                    }
-
-                    .menu_index_active{
-                        width: 100vw;
-                        height: 100vh;
-                        background: #ff3232;
-                    }
-
-                    .activeline1__bars-menu{
-                        transform: rotate(43deg) translate( 0px, -2px);
-
-                    }
-                    
-                    .activeline2__bars-menu{
-                        opacity: 0;
-                        margin-left: -50vh;
-                        transform: scale(2);
-                    }
-                    
-                    .activeline3__bars-menu{
-                        transform: rotate(-43deg) translate( 0px,2px);
-
-                    }
-
-                }
-
-                .cont__logo__nav {
-                    transform: scale(0.9);
-                    z-index: 1000;
-                }
-            }
-
-
-        }
+        
 
         /* #####################   CONTENIDO ############################# */
         .titulo__index {
@@ -742,8 +743,9 @@
                 }
 
                 .cont_titulo_dos {
+                    margin-top: 10%;
                     padding-left: 5px;
-                    margin-right: 20%;
+                    margin-right: 0%;
                     p {
                         text-align: start;
                         color: #ffffff;
