--- a/style/sass.css
+++ b/style/sass.css
@@ -4068,6 +4068,61 @@ body {
   height: 100%;
   /* #####################   CONTENIDO ############################# */
 }
+.body__index main .conte__menu .header__index {
+  display: flex;
+  margin: 1rem 5rem 1rem 5rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.body__index main .conte__menu .header__index .icono-menu {
+  transform: scale(0.8);
+  background: #000;
+  z-index: 1000;
+}
+.body__index main .conte__menu .header__index .icono-menu .bars__menu {
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(4);
+  cursor: pointer;
+}
+.body__index main .conte__menu .header__index .icono-menu .bars__menu span {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background: #ffffff;
+  margin-top: 2px;
+  transform-origin: 0px 100%;
+  transition: all 300ms;
+  transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
+}
+.body__index main .conte__menu .header__index .icono-menu .activeline1__bars-menu {
+  transform: rotate(45deg) translate(0px, -1px);
+}
+.body__index main .conte__menu .header__index .icono-menu .activeline2__bars-menu {
+  opacity: 0;
+  margin-left: -50vh;
+  transform: scale(2);
+}
+.body__index main .conte__menu .header__index .icono-menu .activeline3__bars-menu {
+  transform: rotate(-45deg) translate(0px, 1px);
+}
+.body__index main .conte__menu .header__index .cont__logo__nav {
+  transform: scale(0.9);
+  z-index: 1000;
+}
+.body__index main .conte__menu .contendor_activo_de_menu {
+  visibility: hidden;
+  left: 0px;
+  top: 0px;
+  width: 0vw;
+  height: 100vh;
+  position: absolute;
+  z-index: 9;
+  background: #FFF;
+}
 .body__index main .boton_portafolio {
   position: absolute;
   bottom: -4px;
@@ -4132,61 +4187,6 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -10;
-}
-.body__index main .conte__menu .header__index {
-  display: flex;
-  margin: 1rem 5rem 1rem 5rem;
-  justify-content: space-between;
-  align-items: center;
-}
-.body__index main .conte__menu .header__index .icono-menu {
-  transform: scale(0.8);
-  background: #000;
-  z-index: 1000;
-}
-.body__index main .conte__menu .header__index .icono-menu .bars__menu {
-  width: 10px;
-  height: 8px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%) scale(4);
-  cursor: pointer;
-}
-.body__index main .conte__menu .header__index .icono-menu .bars__menu span {
-  display: block;
-  width: 100%;
-  height: 1px;
-  background: #ffffff;
-  margin-top: 1px;
-  transform-origin: 0px 100%;
-  transition: all 300ms;
-  transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
-}
-.body__index main .conte__menu .header__index .icono-menu .bars__menu .menu_index {
-  width: 100vw;
-  height: 100vh;
-  background: #ffffff;
-}
-.body__index main .conte__menu .header__index .icono-menu .menu_index_active {
-  width: 100vw;
-  height: 100vh;
-  background: #ff3232;
-}
-.body__index main .conte__menu .header__index .icono-menu .activeline1__bars-menu {
-  transform: rotate(43deg) translate(0px, -2px);
-}
-.body__index main .conte__menu .header__index .icono-menu .activeline2__bars-menu {
-  opacity: 0;
-  margin-left: -50vh;
-  transform: scale(2);
-}
-.body__index main .conte__menu .header__index .icono-menu .activeline3__bars-menu {
-  transform: rotate(-43deg) translate(0px, 2px);
-}
-.body__index main .conte__menu .header__index .cont__logo__nav {
-  transform: scale(0.9);
-  z-index: 1000;
 }
 .body__index main .titulo__index {
   display: flex;
@@ -4683,8 +4683,9 @@ body {
     text-transform: capitalize;
   }
   .body__index main .titulo__index .cont_titulo_dos {
+    margin-top: 10%;
     padding-left: 5px;
-    margin-right: 20%;
+    margin-right: 0%;
   }
   .body__index main .titulo__index .cont_titulo_dos p {
     text-align: start;
