--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -1,95 +1,16 @@
-
 .body__index {
     height: 100vh;
     padding: 2em;
+
     main {
         position: relative;
         border-radius: 10px;
         overflow: hidden;
         width: 100%;
         height: 100%;
-        .conte__menu {
-            
-            .header__index {
-                display: flex;
-                margin: 1rem 5rem 1rem 5rem;
-                justify-content: space-between;
-                align-items: center;
 
-                .icono-menu {
-                    transform: scale(0.8);
-                    background: #000;
-                    z-index: 1000;
-                    .bars__menu{
-                        width: 10px;
-                        height: 10px;
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%) scale(4);
-                        span {
-                            display: block;
-                            width: 100%;
-                            height: 1px;
-                            background: #ffffff;
-                            margin-top: 2px;
-                            transform-origin: 0px 100%;
-                            transition: all 800ms;
-                            transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
-                        }
-                    }
-
-                    .activeline1__bars-menu{
-                        transform: rotate(45deg) translate( 0px , -1px);
-
-                    }
-                    
-                    .activeline2__bars-menu{
-                        opacity: 0;
-                        margin-left: -50vh;
-                        transform: scale(2);
-                    }
-                    
-                    .activeline3__bars-menu{
-                        transform: rotate(-45deg) translate( 0.8px, 1px);
-
-                    }
-
-                }
-                .cont__logo__nav {
-                    transform: scale(0.9);
-                    z-index: 1000;
-                }
-
-                
-            }
-            .contendor_activo_de_menu{
-                right: 0px;
-                top: 0px;
-                width: 0vw;
-                height: 100vh;
-                position:absolute;
-                z-index: 9;
-                background: #FFF;
-                transform-origin: 0px 100%;
-                transition: all 800ms;
-                transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
-            }
-
-            .contendor_activo_de_menu_op{
-                
-                right: 0px;
-                top: 0px;
-                width: 100vw;
-                height: 100vh;
-                position:absolute;
-                z-index: 9;
-                background: #FFF;
-            }
-
-
-        }
         
+
         .boton_portafolio {
             position: absolute;
             bottom: -4px;
@@ -165,7 +86,7 @@
 
         }
 
-        
+
 
         /* #####################   CONTENIDO ############################# */
         .titulo__index {
@@ -226,10 +147,11 @@
 
                 .contens_chips {
                     padding-left: 5px;
-                    display: flex;
+                    display: grid;
                     column-gap: 10px;
                     grid-auto-rows: 2rem;
-                    grid-template-columns: repeat(auto-fill, minmax(min(100%, 15rem), 1fr));
+                    row-gap: 1em;
+                    grid-template-columns: repeat(auto-fill, minmax(min(100%, 10rem), 1fr));
 
                     .chips {
                         background: rgba(255, 255, 255, 0.11);
@@ -296,7 +218,6 @@
             overflow: hidden;
             width: 100%;
             height: 100%;
-            
 
             .boton_portafolio {
                 position: absolute;
@@ -373,67 +294,6 @@
                 z-index: -10;
 
             }
-
-            .conte__menu {
-
-                .header__index {
-                    display: flex;
-                    margin: 1rem 1rem 2rem 1rem;
-                    justify-content: space-between;
-                    align-items: center;
-
-                    .icono-menu {
-                        margin-right: 1em;
-                        transform: scale(0.7);
-                        background: #00000000;
-                        z-index: 1000;
-                        .bars__menu{
-
-                            width: 10px;
-                            height: 9px;
-                            position:relative;
-                            top: 50%;
-                            left: 50%;
-                            transform: translate(0%, 100%) scale(5);
-                            cursor: pointer;
-                            span {
-                                display: block;
-                                width: 100%;
-                                height: 0.5px;
-                                background: #ffffff;
-                                margin-top: 2px;
-                                transform-origin: 0px 100%;
-                                transition: all 300ms;
-                                transition-timing-function: cubic-bezier(0.01, 1.02, 1, 1.59);
-                            }
-                        }
-    
-    
-                        .activeline1__bars-menu{
-                            transform: rotate(45deg) translate( 0px, -1px);
-    
-                        }
-                        
-                        .activeline2__bars-menu{
-                            opacity: 0;
-                            margin-left: -5em;
-                            transform: scale(2); 
-                        }
-                        
-                        .activeline3__bars-menu{
-                            transform: rotate(-45deg) translate( 0px,1px);
-    
-                        }
-    
-                    }
-
-                    .cont__logo__nav {
-                        transform: scale(0.9);
-                        z-index: 1000;
-                    }
-                }
-            }
-
             /* #####################   CONTENIDO ############################# */
             .titulo__index {
                 display: flex;
@@ -567,7 +427,7 @@
             width: 100%;
             height: 100%;
             padding: 0em;
-            
+
 
             .boton_portafolio {
                 position: absolute;
@@ -585,7 +445,7 @@
                         bottom: 25px;
                         right: 15px;
                         z-index: 1;
-                        transform: rotate(-55deg);
+                        transform: rotate(0deg);
                         transition-property: transform;
                         transition-duration: 0.2s;
                         transition-delay: 0s;
@@ -653,6 +513,7 @@
                     margin: 1rem 1rem 2rem 1rem;
                     justify-content: space-between;
                     align-items: center;
+
                     .cont__logo__nav {
                         transform: scale(0.9);
                         z-index: 1000;
@@ -669,7 +530,7 @@
                 margin: 1rem 1rem 1rem 1rem;
                 flex-direction: column;
                 gap: 1em;
-                justify-content:space-between;
+                justify-content: space-between;
                 border-left: 1px solid #FFF;
                 text-shadow: 0px 0px 12px rgba(0, 0, 0, 0.30);
 
@@ -758,6 +619,7 @@
                     margin-top: 10%;
                     padding-left: 5px;
                     margin-right: 0%;
+
                     p {
                         text-align: start;
                         color: #ffffff;
